--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
               <a class="nav-link py-0" href="#">Intranet</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0 pr-5">
+          <div class="input-group w-25 my-2 my-lg-0 pr-5">
+          <!-- <form class="form-inline my-2 my-lg-0 pr-5"> -->
             <select class="custom-select pr-5 py-0">
               <option selected>In English</option>
               <option value="1">Suomeksi</option>
               <option value="2">På svenska</option>
               <option value="3">По-русски</option>
             </select>
-          </form>
+          </div>
+          <!-- </form> -->
         </div>
       </div>
     </nav>
