--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             </li>
           </ul>
           <div class="input-group w-25 my-2 my-lg-0 pr-5">
-          <!-- <form class="form-inline my-2 my-lg-0 pr-5"> -->
             <select class="custom-select pr-5 py-0">
               <option selected>In English</option>
               <option value="1">Suomeksi</option>
@@ -32,7 +31,6 @@
               <option value="3">По-русски</option>
             </select>
           </div>
-          <!-- </form> -->
         </div>
       </div>
     </nav>
@@ -41,15 +39,15 @@
     <!-- Second Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/logo.png" width="100" alt=""></a>
+        <a class="navbar-brand pr-3" href="#"><img src="assets/logo.png" width="120" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Company <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Company</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Products</a>
@@ -66,6 +64,28 @@
       </div>
     </nav>
     <!-- End of Second Navigation Bar -->
+
+    <!-- Parallax background -->
+    <div class="parallax container-fluid">
+      <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-12 text-center px-0">
+          <h1 class="display-4 text-white mb-4 px-0">Software fueling digital marketing</h1>
+          <button class="btn btn-success">Learn more</button>
+        </div>
+      </div>
+    </div>
+    <!-- End of Parallax background -->
+
+    <!-- Main body -->
+    <!-- <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="../assets/" alt="..." class="img-thumbnail">
+        </div>
+      </div>
+    </div> -->
+
+    <!-- End of Main body -->
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
