--- a/index.html
+++ b/index.html
@@ -77,13 +77,34 @@
     <!-- End of Parallax background -->
 
     <!-- Main body -->
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <img src="../assets/" alt="..." class="img-thumbnail">
+    <div class="container">
+      <div class="row my-5">
+        <div class="thumbnail col-md-4 text-center px-1 py-2">
+          <a href="#">
+            <img src="assets/company.png" alt="" class="img-fluid rounded">
+            <div class="caption">
+                <h4 class="text-light">Company</h4>
+            </div>
+          </a>
+        </div>
+        <div class="thumbnail col-md-4 text-center px-1 py-2">
+          <a href="#">
+            <img src="assets/products.png" alt="" class="img-fluid rounded">
+            <div class="caption">
+              <h4 class="text-light">Products</h4>
+            </div>
+          </a>
+        </div>
+        <div class="thumbnail col-md-4 text-center px-1 py-2">
+          <a href="#">
+            <img src="assets/contact.png" alt="" class="img-fluid rounded">
+            <div class="caption">
+              <h4 class="text-light">Contact us</h4>
+            </div>
+          </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- End of Main body -->
 
