--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     </div>
     <!-- End of Parallax background -->
 
-    <!-- Main body -->
-    <div class="container">
-      <div class="row my-5">
-        <div class="thumbnail col-md-4 text-center px-1 py-2">
+    <!-- Thumbnails -->
+    <div class="container px-0">
+      <div class="row h-100 justify-content-center align-items-center my-5">
+        <div class="col-md-4 text-center px-1 py-2">
           <a href="#">
             <img src="assets/company.png" alt="" class="img-fluid rounded">
             <div class="caption">
@@ -87,7 +87,7 @@
             </div>
           </a>
         </div>
-        <div class="thumbnail col-md-4 text-center px-1 py-2">
+        <div class="col-md-4 text-center px-1 py-2">
           <a href="#">
             <img src="assets/products.png" alt="" class="img-fluid rounded">
             <div class="caption">
@@ -95,7 +95,7 @@
             </div>
           </a>
         </div>
-        <div class="thumbnail col-md-4 text-center px-1 py-2">
+        <div class="col-md-4 text-center px-1 py-2">
           <a href="#">
             <img src="assets/contact.png" alt="" class="img-fluid rounded">
             <div class="caption">
@@ -105,9 +105,29 @@
         </div>
       </div>
     </div>
+    <!-- End of Thumbnails -->
 
-    <!-- End of Main body -->
-
+    <!-- Numbers -->
+    <div class="container px-0 w-50">
+      <div class="row h-100 justify-content-center align-items-center my-5">
+        <div class="thumbnail col-md-4 col-xs-12 text-center px-1 py-2">
+          <img src="assets/business-icon.png" alt="" class="float-left">
+          <p class="h2 font-weight-light">3000</p>
+          <p>Clients</p>
+        </div>
+        <div class="thumbnail col-md-4 text-center px-1 py-2">
+          <img src="assets/employees-icon.png" alt="" class="float-left">
+          <p class="h2 font-weight-light">180</p>
+          <p>Employees</p>
+        </div>
+        <div class="col-md-4 text-center px-1 py-2">
+          <img src="assets/users-icon.png" alt="" class="float-left">
+          <p class="h2 font-weight-light">10000</p>
+          <p>Daily users</p>
+        </div>
+      </div>
+    </div>
+    <!-- End of Numbers -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
