RSS feed implemented

--- a/index.html
+++ b/index.html
@@ -129,8 +129,36 @@
     </div>
     <!-- End of Numbers -->
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- Latest News -->
+    <div class="container-fluid bg-light px-0 py-3">
+      <h3 class="text-dark text-center">Latest news</h3>
+
+      <div class="row w-75 mx-auto">
+        <div class="col-md-4">
+          <div class="card-body">
+            <h5 class="card-title">Whaaaat</h5>
+            <p class="card-text">Yees</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-body">
+            <h5 class="card-title">Whaaaat</h5>
+            <p class="card-text">Yees</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-body">
+            <h5 class="card-title">Whaaaat</h5>
+            <p class="card-text">Yees</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Latest News -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
