--- a/index.html
+++ b/index.html
@@ -130,29 +130,36 @@
     <!-- End of Numbers -->
 
     <!-- Latest News -->
-    <div class="container-fluid bg-light px-0 py-3">
+    <div id="latest-news" class="container-fluid bg-latest-news px-0 py-3">
       <h3 class="text-dark text-center">Latest news</h3>
 
-      <div class="row w-75 mx-auto">
-        <div class="col-md-4">
-          <div class="card-body">
-            <h5 class="card-title">Whaaaat</h5>
-            <p class="card-text">Yees</p>
+      <div class="row w-75 mx-auto px-5">
+        <div class="col-md-4 px-2 py-2 my-2">
+          <div class="news-card card-body bg-white h-100">
+            <a class="nav-link" href="">
+              <h6 class="card-title text-muted font-weight-light"></h6>
+              <p class="card-text text-dark">Loading, please wait...</p>
+            </a>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card-body">
-            <h5 class="card-title">Whaaaat</h5>
-            <p class="card-text">Yees</p>
+        <div class="col-md-4 px-2 py-2 my-2">
+          <div class="news-card card-body bg-white h-100">
+            <a class="nav-link" href="">
+              <h6 class="card-title text-muted font-weight-light"></h6>
+              <p class="card-text text-dark">Loading, please wait...</p>
+            </a>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card-body">
-            <h5 class="card-title">Whaaaat</h5>
-            <p class="card-text">Yees</p>
+        <div class="col-md-4 px-2 py-2 my-2">
+          <div class="news-card card-body bg-white h-100">
+            <a class="nav-link" href="">
+                <h6 class="card-title text-muted font-weight-light"></h6>
+                <p class="card-text text-dark">Loading, please wait...</p>
+            </a>
           </div>
         </div>
       </div>
+
     </div>
     <!-- End of Latest News -->
 
