References and Subscription implemented

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 
     <!-- Latest News -->
     <div id="latest-news" class="container-fluid bg-latest-news px-0 py-3">
-      <h3 class="text-dark text-center">Latest news</h3>
+      <h3 class="py-3 text-dark text-center">Latest news</h3>
 
       <div class="row w-75 mx-auto px-5">
         <div class="col-md-4 px-2 py-2 my-2">
-          <div class="news-card card-body bg-white h-100">
+          <div class="news-card card-body rounded bg-white h-100">
             <a class="nav-link" href="">
               <h6 class="card-title text-muted font-weight-light"></h6>
               <p class="card-text text-dark">Loading, please wait...</p>
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="col-md-4 px-2 py-2 my-2">
-          <div class="news-card card-body bg-white h-100">
+          <div class="news-card card-body rounded bg-white h-100">
             <a class="nav-link" href="">
               <h6 class="card-title text-muted font-weight-light"></h6>
               <p class="card-text text-dark">Loading, please wait...</p>
@@ -151,7 +151,7 @@
           </div>
         </div>
         <div class="col-md-4 px-2 py-2 my-2">
-          <div class="news-card card-body bg-white h-100">
+          <div class="news-card card-body rounded bg-white h-100">
             <a class="nav-link" href="">
                 <h6 class="card-title text-muted font-weight-light"></h6>
                 <p class="card-text text-dark">Loading, please wait...</p>
@@ -162,6 +162,78 @@
 
     </div>
     <!-- End of Latest News -->
+
+    <!-- References -->
+    <div id="references" class="container-fluid bg-white px-0 py-3">
+      <h3 class="py-3 text-dark text-center">References</h3>
+
+      <div class="row mx-auto px-5">
+        <div class="col-md-3 col-sm-6 px-2 py-2 my-2">
+          <div class="card h-100">
+            <img class="card-img-top" src="assets/bosch.png" alt="Card image cap">
+            <div class="border-top card-body text-center">
+              <h5 class="card-title">Robert Bosch</h5>
+              <p class="card-text text-dark">Bosch is a multinational engineering and electronics company.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6 px-2 py-2 my-2">
+          <div class="card h-100">
+            <img class="card-img-top" src="assets/thebodyshop.png" alt="Card image cap">
+            <div class="border-top card-body text-center">
+              <h5 class="card-title">The Body Shop</h5>
+              <p class="card-text text-dark">The Body Shop is a global beauty brand and it has more than 3,000 stores in more than 60 countries.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6 px-2 py-2 my-2">
+          <div class="card h-100">
+            <img class="card-img-top" src="assets/laplandhotels.png" alt="Card image cap">
+            <div class="border-top card-body text-center">
+              <h5 class="card-title">Lapland Hotels</h5>
+              <p class="card-text text-dark">Lapland Hotels is the largest and the most diverse hotel chain in Lapland.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6 px-2 py-2 my-2">
+          <div class="card h-100">
+            <img class="card-img-top" src="assets/ikea.png" alt="Card image cap">
+            <div class="border-top card-body text-center">
+              <h5 class="card-title">IKEA</h5>
+              <p class="card-text text-dark">IKEA is a multinational furniture store.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- End of References -->
+
+    <!-- Subscribe -->
+    <div id="subscribe" class="container-fluid text-center border-top px-0 py-3 mt-5">
+      <h3 class="py-3 text-dark ">Subscribe to our newsletter</h3>
+      <p class="text-dark">Follow our story and get the latest promotonial news about our products and events.</p>
+      <div class="input-group input-group-lg w-50 my-3 mx-auto">
+        <input id="email" class="form-control mr-sm-2" type="text" placeholder="Your email address" aria-label="Email address">
+        <button id="subscribeBtn" class="btn btn-success my-2 my-sm-0" type="button">Subscribe</button>
+      </div>
+    </div>
+    <!-- End of Subscribe -->
+
+    <!-- Footer -->
+    <footer>
+      <div class="container-fluid bg-dark">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="#"><h5>Liana Technologies</h5></a>
+          </div>
+          <div class="col-md-6">
+            <p>WOW</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End of Footer -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
