--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Liana Technologies</title>
   </head>
@@ -11,11 +12,8 @@
     <!-- First Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-default">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="first-nav">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav navbar-right ml-auto">
             <li class="nav-item px-1">
               <a class="nav-link py-0" href="#">News</a>
             </li>
@@ -222,15 +220,50 @@
 
     <!-- Footer -->
     <footer>
-      <div class="container-fluid bg-dark">
-        <div class="row">
-          <div class="col-md-6">
-            <a href="#"><h5>Liana Technologies</h5></a>
-          </div>
-          <div class="col-md-6">
-            <p>WOW</p>
+      <nav class="navbar navbar-expand-lg navbar-dark px-3">
+        <div class="container py-5">
+          <a class="navbar-brand" href="#">Liana Technologies</a>
+          <div>
+            <ul class="nav navbar-nav ml-auto text-light">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Company</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">News</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Intranet</a>
+              </li>
+            </ul>
           </div>
         </div>
+      </nav>
+      <div class="container footer-info px-3 pb-5">
+        <ul class="d-inline-block text-light px-0 w-25 mr-0">
+          <li class="">
+            <h5>Sales and inquiries</h5>
+          </li>
+          <li class="font-weight-light">
+            Email: sales@lianatech.com
+          </li>
+          <li class="font-weight-light">
+            Phone: +358 10 387 7053
+          </li>
+        </ul>
+        <div class="d-inline-block">
+          <button class="btn btn-success">Contact us</button>
+        </div>
+        <ul class="d-inline-block social">
+          <li><a href="#"><i class=" fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
       </div>
     </footer>
     <!-- End of Footer -->
