--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <li class="nav-item px-1">
               <a class="nav-link py-0" href="#">News</a>
             </li>
-            <li class="nav-item px-1">
+            <li class="nav-item pl-1 pr-3">
               <a class="nav-link py-0" href="#">Intranet</a>
             </li>
           </ul>
-          <div class="input-group w-25 my-2 my-lg-0 pr-5">
+          <div class="input-group col-md-3 pl-0 pr-5">
             <select class="custom-select pr-5 py-0">
               <option selected>In English</option>
-              <option value="1">Suomeksi</option>
-              <option value="2">På svenska</option>
-              <option value="3">По-русски</option>
+              <option>Suomeksi</option>
+              <option>På svenska</option>
+              <option>По-русски</option>
             </select>
           </div>
         </div>
@@ -75,9 +75,9 @@
     <!-- End of Parallax background -->
 
     <!-- Thumbnails -->
-    <div class="container px-0">
+    <div class="container px-5">
       <div class="row h-100 justify-content-center align-items-center my-5">
-        <div class="col-md-4 text-center px-1 py-2">
+        <div class="col-md-4 text-center px-4 py-2">
           <a href="#">
             <img src="assets/company.png" alt="" class="img-fluid rounded">
             <div class="caption">
@@ -85,7 +85,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4 text-center px-1 py-2">
+        <div class="col-md-4 text-center px-4 py-2">
           <a href="#">
             <img src="assets/products.png" alt="" class="img-fluid rounded">
             <div class="caption">
@@ -93,7 +93,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4 text-center px-1 py-2">
+        <div class="col-md-4 text-center px-4 py-2">
           <a href="#">
             <img src="assets/contact.png" alt="" class="img-fluid rounded">
             <div class="caption">
@@ -215,6 +215,7 @@
         <input id="email" class="form-control mr-sm-2" type="text" placeholder="Your email address" aria-label="Email address">
         <button id="subscribeBtn" class="btn btn-success my-2 my-sm-0" type="button">Subscribe</button>
       </div>
+      <p id="subscription-msg" class="text-danger"></p>
     </div>
     <!-- End of Subscribe -->
 
@@ -222,8 +223,10 @@
     <footer>
       <nav class="navbar navbar-expand-lg navbar-dark px-3">
         <div class="container py-5">
-          <a class="navbar-brand" href="#">Liana Technologies</a>
-          <div>
+          <div class="navbar-brand-container">
+            <a class="navbar-brand" href="#">Liana Technologies</a>
+          </div>
+          <div class="footer-list">
             <ul class="nav navbar-nav ml-auto text-light">
               <li class="nav-item">
                 <a class="nav-link" href="#">Company</a>
@@ -267,6 +270,28 @@
       </div>
     </footer>
     <!-- End of Footer -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="thankYouModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5>Newsletter</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p class="h3 text-dark">Are you sure you want to subscribe to Liana's mailing list</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button id="submitSubscribe" type="button" class="btn btn-success" data-dismiss="modal">Continue</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Modal -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
