Latest news fade-in implemented

--- a/index.html
+++ b/index.html
@@ -138,34 +138,39 @@
       <h3 class="py-3 text-dark text-center">Latest news</h3>
 
      <div class="container">
-       <div class="row mx-auto px-5">
-         <div class="bg-white rounded card-container col-md-4 px-2 py-2 my-2">
-           <div class="news-card card-body h-100">
-             <a class="nav-link" href="">
-               <h6 class="card-title text-muted font-weight-light"></h6>
-               <p class="card-text text-dark">Loading, please wait...</p>
-             </a>
+       <div class="row mx-auto px-5 py-5">
+         <div class="card-container col-md-4 col-xs-12 px-2 py-2">
+           <div class="bg-white rounded h-100">
+             <div class="news-card card-body">
+               <a class="nav-link" href="">
+                 <h6 class="card-title text-muted font-weight-light"></h6>
+                 <p class="card-text text-dark">Loading, please wait...</p>
+               </a>
+             </div>
            </div>
          </div>
-         <div class="bg-white rounded card-container col-md-4 px-2 py-2 my-2 ">
-           <div class="news-card card-body h-100">
-             <a class="nav-link" href="">
-               <h6 class="card-title text-muted font-weight-light"></h6>
-               <p class="card-text text-dark">Loading, please wait...</p>
-             </a>
+         <div class="card-container col-md-4 col-xs-12 px-2 py-2">
+           <div class="bg-white rounded h-100">
+             <div class="news-card card-body ">
+               <a class="nav-link" href="">
+                 <h6 class="card-title text-muted font-weight-light"></h6>
+                 <p class="card-text text-dark">Loading, please wait...</p>
+               </a>
+             </div>
            </div>
          </div>
-         <div class="bg-white rounded card-container col-md-4 px-2 py-2 my-2">
-           <div class="news-card card-body h-100">
-             <a class="nav-link" href="">
-               <h6 class="card-title text-muted font-weight-light"></h6>
-               <p class="card-text text-dark">Loading, please wait...</p>
-             </a>
+         <div class="card-container col-md-4 col-xs-12 px-2 py-2">
+           <div class="bg-white rounded h-100">
+             <div class="news-card card-body ">
+               <a class="nav-link" href="">
+                 <h6 class="card-title text-muted font-weight-light"></h6>
+                 <p class="card-text text-dark">Loading, please wait...</p>
+               </a>
+             </div>
            </div>
          </div>
        </div>
      </div>
-
 
     </div>
     <!-- End of Latest News -->
