--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
     <!-- End of Latest News -->
 
     <!-- References -->
-    <div id="references" class="container-fluid bg-white px-0 py-3">
+    <div id="references" class="container-fluid bg-white px-md-5 px-0 py-3">
       <h3 class="py-3 text-dark text-center">References</h3>
 
       <div class="row mx-auto px-5">
-        <div class="col-md-3 col-sm-6 px-2 py-2 my-2">
+        <div class="col-md-3 col-sm-6 px-md-2 px-0 py-2 my-2">
           <div class="card h-100">
             <img class="card-img-top" src="assets/bosch.png" alt="Card image cap">
             <div class="border-top card-body text-center">
@@ -241,41 +241,41 @@
             <a class="navbar-brand" href="#">Liana Technologies</a>
           </div>
           <div class="footer-list">
-            <ul class="nav navbar-nav text-light px-sm-0">
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Company</a>
+                <a class="nav-link text-light" href="#">Company</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Products</a>
+                <a class="nav-link text-light" href="#">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link text-light" href="#">Contact us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">News</a>
+                <a class="nav-link text-light" href="#">News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Intranet</a>
+                <a class="nav-link text-light" href="#">Intranet</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <div class="container footer-info px-3 pb-5">
-        <ul class="d-inline-block social pull-right mx-sm-auto">
+      <div class="container px-md-3 px-sm-1 pb-5 footer-info">
+        <ul class="social pull-right mx-sm-auto">
           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         </ul>
-        <ul class="col-xs-12 d-inline-block text-light px-0 mr-0">
+        <ul class="d-inline-block text-light px-0 mr-3">
           <li class="">
             <h5>Sales and inquiries</h5>
           </li>
           <li class="font-weight-light">
-            Email: sales@lianatech.com
+            <p>Email: sales@lianatech.com</p>
           </li>
           <li class="font-weight-light">
-            Phone: +358 10 387 7053
+            </p>Phone: +358 10 387 7053</p>
           </li>
         </ul>
         <div class="d-inline-block">
@@ -286,7 +286,7 @@
     </footer>
     <!-- End of Footer -->
 
-    <!-- Modal -->
+    <!-- Thank you modal -->
     <div class="modal fade" id="thankYouModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
