--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Liana Technologies</title>
+    <link rel="icon" href="assets/metalogo.jpg">
   </head>
   <body>
     <!-- First Navigation Bar -->
@@ -262,26 +263,27 @@
         </div>
       </nav>
       <div class="container px-md-3 px-sm-1 pb-5 footer-info">
-        <ul class="social pull-right mx-sm-auto">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        </ul>
-        <ul class="d-inline-block text-light px-0 mr-3">
-          <li class="">
-            <h5>Sales and inquiries</h5>
-          </li>
-          <li class="font-weight-light">
-            <p>Email: sales@lianatech.com</p>
-          </li>
-          <li class="font-weight-light">
-            </p>Phone: +358 10 387 7053</p>
-          </li>
-        </ul>
-        <div class="d-inline-block">
-          <button class="btn btn-success">Contact us</button>
+        <div class="footer-add-margin">
+          <ul class="social pull-right mx-sm-auto">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+          <ul class="d-inline-block text-light px-0 mr-3">
+            <li class="">
+              <h5>Sales and inquiries</h5>
+            </li>
+            <li class="font-weight-light">
+              <p>Email: sales@lianatech.com</p>
+            </li>
+            <li class="font-weight-light">
+              </p>Phone: +358 10 387 7053</p>
+            </li>
+          </ul>
+          <div class="d-inline-block">
+            <button class="btn btn-success">Contact us</button>
+          </div>
         </div>
-
       </div>
     </footer>
     <!-- End of Footer -->
