--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
              <div class="news-card card-body">
                <a class="nav-link" href="">
                  <h6 class="card-title text-muted font-weight-light"></h6>
-                 <p class="card-text text-dark">Loading, please wait...</p>
+                 <p class="card-text text-dark"></p>
                </a>
              </div>
            </div>
@@ -155,7 +155,7 @@
              <div class="news-card card-body ">
                <a class="nav-link" href="">
                  <h6 class="card-title text-muted font-weight-light"></h6>
-                 <p class="card-text text-dark">Loading, please wait...</p>
+                 <p class="card-text text-dark"></p>
                </a>
              </div>
            </div>
@@ -165,7 +165,7 @@
              <div class="news-card card-body ">
                <a class="nav-link" href="">
                  <h6 class="card-title text-muted font-weight-light"></h6>
-                 <p class="card-text text-dark">Loading, please wait...</p>
+                 <p class="card-text text-dark"></p>
                </a>
              </div>
            </div>
